--- a/rpython/jit/tl/threadedcode/Makefile
+++ b/rpython/jit/tl/threadedcode/Makefile
@@ -2,11 +2,11 @@ SOURCE = lang/sum.tla.py lang/fact.tla.py lang/fib.tla.py lang/ack.tla.py \
 	lang/tak.tla.py lang/gcd.tla.py lang/sum-tail.tla.py lang/fib-tail.tla.py
 
 .PHONY: compile
-compile: targettla-c targettla_bench-c
+compile: targettla-c
 
 .PHONY: targettla-c
 targettla-c: targettla.py tla.py
-	rpython -Ojit --make-jobs=12 $<
+	PYTHONPATH=../../../../ ../../../bin/rpython -Ojit $<
 
 %.tla: %.tla.py
 	./tla_assembler.py $<
